--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dgram": "^1.0.1",
     "ms": "^2.1.3",
+    "net": "^1.0.2",
     "os": "^0.1.2",
     "path": "^0.12.7"
   }
